--- a/charts/timeplus-enterprise/Chart.yaml
+++ b/charts/timeplus-enterprise/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-appVersion: 2.2.8
-description: A Helm chart for deploying a Timeplus enterprise stack.
+appVersion: 2.3.7
+description: A Helm chart for deploying a cluster of Timeplus Enterprise.
 home: https://www.timeplus.com/
 icon: https://timeplus.io/1_SYMBOL_B.png
 keywords:
@@ -16,6 +16,6 @@ maintainers:
   name: Timeplus engineers
 name: timeplus-enterprise
 sources:
-- https://github.com/timeplus-io/helm-charts
+- https://github.com/timeplus-io/proton
 type: application
-version: v2.3.5
+version: v2.4.2
