--- a/charts/base/values.yaml
+++ b/charts/base/values.yaml
@@ -1,13 +1,13 @@
 # 配置为ui的svc的名称与端口
-extSvcName: demo
-extSvcPort: 80
+extSvcName: timeplus-enterprise
+extSvcPort: 8000
 # 访问ks的域名, e.g. www.ks.com,192.168.50.208.nip.io
 domain: www.ks.com
 # 挂载位置 e.g. topbar,global,toolbox,access,cluster,workspace,project,platformSettings
 extParent: topbar
 # ui的超链接名称
-extTitle: demo
+extTitle: Timeplus
 # 扩展包描述
-extDesc: "this is a simple extension"
+extDesc: "Timeplus extension"
 # ingress controller 对外服务的Node端口
 ingressPort: 30888
