try updating extSvcName

--- a/charts/base/values.yaml
+++ b/charts/base/values.yaml
@@ -1,5 +1,5 @@
 # 配置为ui的svc的名称与端口
-extSvcName: timeplus-enterprise
+extSvcName: timeplus-appserver
 extSvcPort: 8000
 # 访问ks的域名, e.g. www.ks.com,192.168.50.208.nip.io
 domain: www.ks.com
