extract new value for storageClass

--- a/values.yaml
+++ b/values.yaml
@@ -4,6 +4,8 @@ base:
   # ingress controller 对外服务的Node端口
   ingressPort: 30888
 timeplus-enterprise:
+  # 必须配置为当前的存储类型，使用以下命令行获得 kubectl get storageclass
+  storageClass: local
   timeplusd:
     # 设置为 1 为单节点，3 为多节点，暂时不支持 1 和 3 以外的值
     replicas: 1
