--- a/charts/base/templates/ingress.yaml
+++ b/charts/base/templates/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: { { .Values.extSvcName } }
+  name: timeplus
   namespace: extension-timeplus-enterprise
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
