--- a/values.yaml
+++ b/values.yaml
@@ -1,8 +1,10 @@
 base:
   # 配置为可访问kubesphere部署的域名, 如www.ks.com 或 192.168.50.208.nip.io
-  domain: www.ks.com
+  domain: 192.168.50.208.nip.io
   # ingress controller 对外服务的Node端口
   ingressPort: 30888
+  # extEmbed若为 iframe 则嵌入，若为 link 则新窗口打开
+  extEmbed: link
 timeplus-enterprise:
   timeplusd:
     # 设置为 1 为单节点，3 为多节点，暂时不支持 1 和 3 以外的值
