--- a/charts/base/templates/JSBundle.yaml
+++ b/charts/base/templates/JSBundle.yaml
@@ -6,7 +6,7 @@ spec:
   rawFrom:
     configMapKeyRef:
       key: index.js
-      name: timeplus-enterprise-cm
+      name: timeplus-enterprise-cm-{{ .Values.extEmbed }}
       namespace: extension-timeplus-enterprise
 status:
   link: /dist/timeplus-enterprise/index.js
