--- a/charts/base/values.yaml
+++ b/charts/base/values.yaml
@@ -1,6 +1,4 @@
-# 挂载位置 e.g. topbar,global,toolbox,access,cluster,workspace,project,platformSettings
 extParent: topbar
-# ui的超链接名称
 extTitle: Timeplus
-# 扩展包描述
 extDesc: "Timeplus extension"
+extEmbed: link
